Fix location of jquery

--- a/pstExtractor/src/main/webapp/templates/layout.xhtml
+++ b/pstExtractor/src/main/webapp/templates/layout.xhtml
@@ -6,7 +6,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 >
 	<f:loadBundle basename="io.github.jmcleodfoss.pstExtractor.text-resources" var="res"/>
-	<h:outputScript library='webjars' name="jquery/1.7.1/jquery-1.7.1.min.js" target="head"/>
+	<h:outputScript library='webjars' name="jquery/1.7.2/jquery.min.js" target="head"/>
 	<h:outputScript library='js' name="util.js" target="head"/>
 	<h:outputStylesheet library="css" name="styles.css" target="head"/>
 	<h:outputScript library='js' name="layout.js" target="head"/>
