--- a/pstExtractor/src/main/webapp/resources/components/journalEntryFolder.xhtml
+++ b/pstExtractor/src/main/webapp/resources/components/journalEntryFolder.xhtml
@@ -8,7 +8,7 @@
 >
 <head/>
 
-<f:loadBundle basename="io.github.jmcleodfoss.pstExtractor.text-resources" var="res"/>
+<f:loadBundle basename="text-resources" var="res"/>
 
 <body>
 	<composite:interface>
