--- a/pstExtractor/src/main/webapp/templates/layout.xhtml
+++ b/pstExtractor/src/main/webapp/templates/layout.xhtml
@@ -5,7 +5,7 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 >
-	<f:loadBundle basename="io.github.jmcleodfoss.pstExtractor.text-resources" var="res"/>
+	<f:loadBundle basename="text-resources" var="res"/>
 	<h:outputScript library='webjars' name="jquery/1.7.2/jquery.min.js" target="head"/>
 	<h:outputScript library='js' name="util.js" target="head"/>
 	<h:outputStylesheet library="css" name="styles.css" target="head"/>
