Put a line after each table row to make data clearer when an item extends over more than one line

--- a/pstExtractor/src/main/webapp/resources/components/appointmentFolder.xhtml
+++ b/pstExtractor/src/main/webapp/resources/components/appointmentFolder.xhtml
@@ -29,7 +29,7 @@
 				<t:htmlTag value="h3">
 					#{folder.name}
 				</t:htmlTag>
-				<h:dataTable value="#{folder.contents}" var="appointment">
+				<h:dataTable styleClass="datatable" value="#{folder.contents}" var="appointment">
 					<h:column>
 						<f:facet name="header">#{res['appointments.heading.description']}</f:facet>
 						#{appointment.title}
