--- a/pstExtractor/src/main/webapp/resources/css/styles.css
+++ b/pstExtractor/src/main/webapp/resources/css/styles.css
@@ -28,6 +28,14 @@ p {
 	padding-bottom: 0.5em;
 }
 
+.datatable {
+	border-collapse: collapse;
+}
+
+.datatable tr {
+	border-bottom: 1px solid #ccc;
+}
+
 .centered-container {
 	text-align: center;
 }
