Use lowercase consistently for colors

--- a/pstExtractor/src/main/webapp/resources/css/styles.css
+++ b/pstExtractor/src/main/webapp/resources/css/styles.css
@@ -74,12 +74,12 @@ p {
 
 .left-menu-selected {
   color: #00008b;
-  background-color: #8DB6CD;
+  background-color: #8db6cd;
 }
 
 .left-menu-unselected {
   color: #00008b;
-  background-color: #B0E0E6;
+  background-color: #b0e0e6;
 }
 
 .show-extents {
