--- a/pstExtractor/src/main/webapp/resources/css/styles.css
+++ b/pstExtractor/src/main/webapp/resources/css/styles.css
@@ -63,6 +63,7 @@ p {
 }
 
 .left-menu-results {
+  /* For consistency; currently not styled */
 }
 
 .left-menu-cell {
@@ -87,6 +88,7 @@ p {
 }
 
 #content {
+  /* For consistency; currently not styled */
 }
 
 #content-container {
