--- a/pstExtractor/src/main/webapp/resources/components/stickyNoteFolder.xhtml
+++ b/pstExtractor/src/main/webapp/resources/components/stickyNoteFolder.xhtml
@@ -4,19 +4,19 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:t="http://myfaces.apache.org/tomahawk"
-	xmlns:composite="http://xmlns.jcp.org/jsf/composite"
+	xmlns:cc="http://xmlns.jcp.org/jsf/composite"
 >
 <head/>
 
 <f:loadBundle basename="text-resources" var="res"/>
 
 <body>
-	<composite:interface>
-		<composite:attribute name="folders" required="true"/>
-		<composite:attribute name="rendered" required="false" default="true"/>
-	</composite:interface>
+	<cc:interface>
+		<cc:attribute name="folders" required="true"/>
+		<cc:attribute name="rendered" required="false" default="true"/>
+	</cc:interface>
 	
-	<composite:implementation>
+	<cc:implementation>
 		<t:htmlTag value="h2" rendered="#{cc.attrs.rendered and not empty cc.attrs.folders}">
 			#{res['stickyNotes.text']}
 		</t:htmlTag>
@@ -40,6 +40,6 @@
 				</h:dataTable>
 			</h:column>
 		</h:dataTable>
-	</composite:implementation>
+	</cc:implementation>
 </body>
 </html>
