--- a/pstExtractor/src/main/webapp/resources/components/appointmentFolder.xhtml
+++ b/pstExtractor/src/main/webapp/resources/components/appointmentFolder.xhtml
@@ -4,7 +4,7 @@
 	xmlns:cc="http://xmlns.jcp.org/jsf/composite"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:t="http://myfaces.apache.org/tomahawk"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 >
 <head/>
 
@@ -17,34 +17,38 @@
 	</cc:interface>
 	
 	<cc:implementation>
-		<t:htmlTag value="h2" rendered="#{cc.attrs.rendered and not empty cc.attrs.folders}">
-			#{res['appointments.text']}
-		</t:htmlTag>
-		<t:htmlTag value="h2" rendered="#{cc.attrs.rendered and empty cc.attrs.folders}">
-			#{res['noAppointments.text']}
-		</t:htmlTag>
+		<ui:fragment rendered="#{cc.attrs.rendered and empty cc.attrs.folders}">
+			<h2>
+				#{res['noAppointments.text']}
+			</h2>
+		</ui:fragment>
 
-		<h:dataTable value="#{cc.attrs.folders}" var="folder" rendered="#{cc.attrs.rendered and not empty cc.attrs.folders}">
-			<h:column>
-				<t:htmlTag value="h3">
-					#{folder.name}
-				</t:htmlTag>
-				<h:dataTable styleClass="datatable" value="#{folder.contents}" var="appointment">
-					<h:column>
-						<f:facet name="header">#{res['appointments.heading.description']}</f:facet>
-						#{appointment.title}
-					</h:column>
-					<h:column>
-						<f:facet name="header">#{res['appointments.heading.start']}</f:facet>
-						#{appointment.start}
-					</h:column>
-					<h:column>
-						<f:facet name="header">#{res['appointments.heading.end']}</f:facet>
-						#{appointment.end}
-					</h:column>
-				</h:dataTable>
-			</h:column>
-		</h:dataTable>
+		<ui:fragment rendered="#{cc.attrs.rendered and not empty cc.attrs.folders}">
+			<h2>
+				#{res['appointments.text']}
+			</h2>
+			<h:dataTable value="#{cc.attrs.folders}" var="folder">
+				<h:column>
+					<h3>
+						#{folder.name}
+					</h3>
+					<h:dataTable styleClass="datatable" value="#{folder.contents}" var="appointment">
+						<h:column>
+							<f:facet name="header">#{res['appointments.heading.description']}</f:facet>
+							#{appointment.title}
+						</h:column>
+						<h:column>
+							<f:facet name="header">#{res['appointments.heading.start']}</f:facet>
+							#{appointment.start}
+						</h:column>
+						<h:column>
+							<f:facet name="header">#{res['appointments.heading.end']}</f:facet>
+							#{appointment.end}
+						</h:column>
+					</h:dataTable>
+				</h:column>
+			</h:dataTable>
+		</ui:fragment>
 	</cc:implementation>
 </body>
 </html>
