Change all components into pure XML (replace root html tag with xml, dropping html DOCTYPE, dropping body tag, etc)

--- a/pstExtractor/src/main/webapp/resources/components/appointmentFolder.xhtml
+++ b/pstExtractor/src/main/webapp/resources/components/appointmentFolder.xhtml
@@ -1,16 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html
+<xml
 	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:cc="http://xmlns.jcp.org/jsf/composite"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 >
-<head/>
-
-<f:loadBundle basename="text-resources" var="res"/>
-
-<body>
 	<cc:interface>
 		<cc:attribute name="folders" required="true"/>
 		<cc:attribute name="rendered" required="false" default="true"/>
@@ -50,5 +44,4 @@
 			</h:dataTable>
 		</ui:fragment>
 	</cc:implementation>
-</body>
-</html>
+</xml>
