--- a/pstExtractor/src/main/webapp/views/About.xhtml
+++ b/pstExtractor/src/main/webapp/views/About.xhtml
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html	xmlns="http://www.w3.org/1999/xhtml"
+<xml	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 >
 	<ui:composition template="/templates/layout.xhtml">
@@ -11,4 +11,4 @@
 			<ui:include src="/sections/about/#{localeBean.getLocalizedFilename('description.xhtml')}"/>
 		</ui:define>
 	</ui:composition>
-</html>
+</xml>
