--- a/pstExtractor/src/main/webapp/views/CorruptPST.xhtml
+++ b/pstExtractor/src/main/webapp/views/CorruptPST.xhtml
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html	xmlns="http://www.w3.org/1999/xhtml"
+<xml	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
@@ -20,4 +20,4 @@
 			<ui:include src="/sections/extraction-form/content.xhtml"/>
 		</ui:define>
 	</ui:composition>
-</html>
+</xml>
