--- a/pstExtractor/src/main/webapp/views/ExtractionForm.xhtml
+++ b/pstExtractor/src/main/webapp/views/ExtractionForm.xhtml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html	xmlns="http://www.w3.org/1999/xhtml"
+<xml	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:tc="http://myfaces.apache.org/tobago/component"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
@@ -14,4 +13,4 @@
 			<ui:include src="/sections/extraction-form/content.xhtml"/>
 		</ui:define>
 	</ui:composition>
-</html>
+</xml>
