--- a/pstExtractor/src/main/webapp/views/Help.xhtml
+++ b/pstExtractor/src/main/webapp/views/Help.xhtml
@@ -1,5 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html	xmlns="http://www.w3.org/1999/xhtml"
+<xml	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 >
 
@@ -13,4 +12,4 @@
 		</ui:define>
 	</ui:composition>
 
-</html>
+</xml>
