--- a/pstExtractor/src/main/webapp/views/Results.xhtml
+++ b/pstExtractor/src/main/webapp/views/Results.xhtml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html	xmlns="http://www.w3.org/1999/xhtml"
+<xml	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
@@ -8,7 +7,7 @@
 	<ui:composition template="/templates/layout.xhtml">
 		<ui:define name="heading">
 			<h:outputFormat value="#{res['results.title.format']}" escape="false">
-				<f:param value="#{pstBean.uploadedFile.name}"/>
+				<f:param value="#{pstBean.uploadedFile.submittedFileName}"/>
 			</h:outputFormat>
 		</ui:define>
 	
@@ -16,4 +15,4 @@
 			<ui:include src="/sections/show-pst/content.xhtml"/>
 		</ui:define>
 	</ui:composition>
-</html>
+</xml>
