Drop unnecessary root xml and html tags, except where needed to introduce namespaces

--- a/pstExtractor/src/main/webapp/views/About.xhtml
+++ b/pstExtractor/src/main/webapp/views/About.xhtml
@@ -1,14 +1,14 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<xml	xmlns="http://www.w3.org/1999/xhtml"
+<ui:composition
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	template="/templates/layout.xhtml"
 >
-	<ui:composition template="/templates/layout.xhtml">
-		<ui:define name="heading">
-			#{res['about.title.text']}
-		</ui:define>
+	<ui:define name="heading">
+		#{res['about.title.text']}
+	</ui:define>
 	
-		<ui:define name="content">
-			<ui:include src="/sections/about/#{localeBean.getLocalizedFilename('description.xhtml')}"/>
-		</ui:define>
-	</ui:composition>
-</xml>
+	<ui:define name="content">
+		<ui:include src="/sections/about/#{localeBean.getLocalizedFilename('description.xhtml')}"/>
+	</ui:define>
+</ui:composition>
