--- a/pstExtractor/src/main/webapp/templates/layout.xhtml
+++ b/pstExtractor/src/main/webapp/templates/layout.xhtml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<xml	xmlns="http://www.w3.org/1999/xhtml" 
+<tc:page id="main"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
@@ -9,37 +9,35 @@
 	<h:outputStylesheet library="css" name="styles.css" target="head"/>
 	<h:outputScript library='js' name="layout.js" target="head"/>
 
-	<tc:page id="main">
-		<h:head>
-			<title>
-				#{res['html.head.title']}
-			</title>
-		</h:head>
+	<h:head>
+		<title>
+			#{res['html.head.title']}
+		</title>
+	</h:head>
 
-		<h:body>
-			<h1 id="heading">
-				<ui:insert name="heading"/>
-			</h1>
+	<h:body>
+		<h1 id="heading">
+			<ui:insert name="heading"/>
+		</h1>
 
-			<div id="left-menu">
-				<ui:insert name="left-menu">
-					<ui:include src="/sections/common/leftmenu.xhtml"/>
-				</ui:insert>
+		<div id="left-menu">
+			<ui:insert name="left-menu">
+				<ui:include src="/sections/common/leftmenu.xhtml"/>
+			</ui:insert>
+		</div>
+
+		<div id="content-container">
+			<div id="content">
+				<ui:insert name="content"/>
 			</div>
+		</div>
 
-			<div id="content-container">
-				<div id="content">
-					<ui:insert name="content"/>
-				</div>
+		<div id="v-spacer"/>
+
+		<div id="footer-container">
+			<div id="footer">
+				<ui:include src="/sections/common/footer.xhtml"/>
 			</div>
-
-			<div id="v-spacer"/>
-
-			<div id="footer-container">
-				<div id="footer">
-					<ui:include src="/sections/common/footer.xhtml"/>
-				</div>
-			</div>
-		</h:body>
-	</tc:page>
-</xml>
+		</div>
+	</h:body>
+</tc:page>
