--- a/pstExtractor/src/main/webapp/views/CorruptPST.xhtml
+++ b/pstExtractor/src/main/webapp/views/CorruptPST.xhtml
@@ -1,23 +1,23 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<xml	xmlns="http://www.w3.org/1999/xhtml"
+<ui:composition
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	template="/templates/layout.xhtml"
 >
-	<ui:composition template="/templates/layout.xhtml">
-		<ui:define name="heading">
-			<h:outputFormat value="#{res['corruptPST.title.format']}">
+	<ui:define name="heading">
+		<h:outputFormat value="#{res['corruptPST.title.format']}">
+			<f:param value="#{pstBean.uploadedFile.name}"/>
+		</h:outputFormat>
+	</ui:define>
+
+	<ui:define name="content"> 
+		<p>
+			<h:outputFormat value="#{res['corruptPST.description.format']}">
 				<f:param value="#{pstBean.uploadedFile.name}"/>
 			</h:outputFormat>
-		</ui:define>
-	
-		<ui:define name="content"> 
-			<p>
-				<h:outputFormat value="#{res['corruptPST.description.format']}">
-					<f:param value="#{pstBean.uploadedFile.name}"/>
-				</h:outputFormat>
-			</p>
-			<ui:include src="/sections/extraction-form/content.xhtml"/>
-		</ui:define>
-	</ui:composition>
-</xml>
+		</p>
+		<ui:include src="/sections/extraction-form/content.xhtml"/>
+	</ui:define>
+</ui:composition>
