--- a/pstExtractor/src/main/webapp/views/NotPST.xhtml
+++ b/pstExtractor/src/main/webapp/views/NotPST.xhtml
@@ -1,19 +1,19 @@
-<xml	xmlns="http://www.w3.org/1999/xhtml"
+<?xml version="1.0" encoding="UTF-8"?>
+<ui:composition
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	template="/templates/layout.xhtml"
 >
-	<ui:composition template="/templates/layout.xhtml">
-		<ui:define name="heading">
-			<h:outputFormat value="#{res['notPST.title.format']}" escape="false">
-				<f:param value="#{pstBean.uploadedFile.name}"/>
-			</h:outputFormat>
-		</ui:define>
+	<ui:define name="heading">
+		<h:outputFormat value="#{res['notPST.title.format']}" escape="false">
+			<f:param value="#{pstBean.uploadedFile.name}"/>
+		</h:outputFormat>
+	</ui:define>
 	
-		<ui:define name="content">
-			<h:outputFormat value="#{res['notPST.description.format']}">
-				<f:param value="#{pstBean.uploadedFile.name}"/>
-			</h:outputFormat>
-		</ui:define>
-	</ui:composition>
-</xml>
+	<ui:define name="content">
+		<h:outputFormat value="#{res['notPST.description.format']}">
+			<f:param value="#{pstBean.uploadedFile.name}"/>
+		</h:outputFormat>
+	</ui:define>
+</ui:composition>
