--- a/pstExtractor/src/main/webapp/views/Results.xhtml
+++ b/pstExtractor/src/main/webapp/views/Results.xhtml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<xml	xmlns="http://www.w3.org/1999/xhtml"
+<ui:composition
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	template="/templates/layout.xhtml"
 >
-	<ui:composition template="/templates/layout.xhtml">
 		<ui:define name="heading">
-			<h:outputFormat value="#{res['results.title.format']}" escape="false">
-				<f:param value="#{pstBean.uploadedFile.submittedFileName}"/>
-			</h:outputFormat>
-		</ui:define>
+		<h:outputFormat value="#{res['results.title.format']}" escape="false">
+			<f:param value="#{pstBean.uploadedFile.submittedFileName}"/>
+		</h:outputFormat>
+	</ui:define>
 	
-		<ui:define name="content">
-			<ui:include src="/sections/show-pst/content.xhtml"/>
-		</ui:define>
-	</ui:composition>
-</xml>
+	<ui:define name="content">
+		<ui:include src="/sections/show-pst/content.xhtml"/>
+	</ui:define>
+</ui:composition>
