--- a/pstExtractor/src/main/webapp/templates/layout.xhtml
+++ b/pstExtractor/src/main/webapp/templates/layout.xhtml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <tc:page id="main"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
@@ -6,8 +7,8 @@
 	xmlns:tc="http://myfaces.apache.org/tobago/component"
 >
 	<f:loadBundle basename="text-resources" var="res"/>
-	<h:outputStylesheet library="css" name="styles.css" target="head"/>
-	<h:outputScript library='js' name="layout.js" target="head"/>
+	<tc:style file="#{request.contextPath}/resources/css/styles.css"/>
+	<tc:script file="#{request.contextPath}/resources/js/layout.js"/>
 
 	<h:head>
 		<title>
