Use tc:meta to set title instead of h:head, as the presence of the h:head tag prevents Ajax from working

--- a/pstExtractor/src/main/webapp/templates/layout.xhtml
+++ b/pstExtractor/src/main/webapp/templates/layout.xhtml
@@ -9,12 +9,7 @@
 	<f:loadBundle basename="text-resources" var="res"/>
 	<tc:style file="#{request.contextPath}/resources/css/styles.css"/>
 	<tc:script file="#{request.contextPath}/resources/js/layout.js"/>
-
-	<h:head>
-		<title>
-			#{res['html.head.title']}
-		</title>
-	</h:head>
+	<tc:meta name="title" content="#{res['html.head.title']}"/>
 
 	<h:body>
 		<h1 id="heading">
